Integrate Supabase for database functionality
Added Supabase CDN and script for database integration.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                             900: '#004D40',
                         },
                         accent: {
-                            pink: '#EC4899', // Pink-500
-                            rose: '#F43F5E', // Rose-500
+                            pink: '#EC4899',
+                            rose: '#F43F5E',
                         }
                     },
                     fontFamily: {
@@ -34,6 +34,10 @@
             }
         }
     </script>
+
+    <!-- Supabase CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/supabase.js" defer></script>
 
     <!-- App Scripts -->
     <script src="js/db.js"></script>
@@ -129,40 +133,10 @@
             <div>
                 <h4 class="font-bold text-white mb-4">Contact Us</h4>
                 <div class="space-y-3 text-sm">
-                    <p class="flex items-center gap-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-primary-500" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
-                        </svg>
-                        Nairobi, Kenya
-                    </p>
-                    <p class="flex items-center gap-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-primary-500" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
-                        </svg>
-                        +254 115 516 138
-                    </p>
-                    <p class="flex items-center gap-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-500" viewBox="0 0 24 24"
-                            fill="currentColor">
-                            <path
-                                d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z" />
-                        </svg>
-                        0115 516 136
-                    </p>
-                    <p class="flex items-center gap-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-primary-500" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-                        </svg>
-                        biltonesbrand@gmail.com
-                    </p>
+                    <p class="flex items-center gap-2">Nairobi, Kenya</p>
+                    <p class="flex items-center gap-2">+254 115 516 138</p>
+                    <p class="flex items-center gap-2">0115 516 136</p>
+                    <p class="flex items-center gap-2">biltonesbrand@gmail.com</p>
                 </div>
             </div>
         </div>
@@ -171,56 +145,9 @@
         </div>
     </footer>
 
-    <script>
-        // Render Featured Products
-        // Render Featured Products
-        try {
-            const products = DB.getProducts().slice(0, 4); // Get first 4
-            const container = document.getElementById('featured-products');
-
-            if (!products || products.length === 0) {
-                container.innerHTML = '<div class="col-span-full text-center py-8 text-gray-500">No products found. Database might be empty.</div>';
-            } else {
-                products.forEach(product => {
-                    const hasOffer = product.offerPrice && new Date(product.offerExpires) > new Date();
-                    const priceDisplay = hasOffer
-                        ? `<span class="text-red-500 font-bold">${App.formatMoney(product.offerPrice)}</span> <span class="text-gray-400 line-through text-sm">${App.formatMoney(product.price)}</span>`
-                        : `<span class="text-gray-900 font-bold">${App.formatMoney(product.price)}</span>`;
-
-                    const card = `
-                        <div class="bg-white p-4 rounded-xl shadow-sm hover:shadow-md transition group border border-gray-100">
-                            <div class="relative mb-4 overflow-hidden rounded-lg bg-gray-100 h-48">
-                                <img src="${product.image}" alt="${product.title}" class="w-full h-full object-cover group-hover:scale-105 transition duration-500 relative z-10" onerror="this.onerror=null; this.src='https://placehold.co/400x400?text=No+Image'">
-                                ${hasOffer ? '<span class="absolute top-2 left-2 bg-red-500 text-white text-xs font-bold px-2 py-1 rounded z-20">OFFER</span>' : ''}
-                            </div>
-                            <div class="p-4">
-                                <h3 class="font-semibold text-gray-800 mb-2 truncate">${product.title}</h3>
-                                <div class="flex justify-between items-center">
-                                    <div>${priceDisplay}</div>
-                                    <button onclick="App.addToCart(DB.getProduct(${product.id}))" class="bg-primary-50 text-primary-600 p-2 rounded-full hover:bg-primary-100 transition">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
-                                        </svg>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    `;
-                    container.innerHTML += card;
-                });
-            }
-        } catch (e) {
-            console.error("Critical Error rendering products:", e);
-            const container = document.getElementById('featured-products');
-            if (container) {
-                container.innerHTML = `<div class="col-span-full text-center py-8 text-red-500 bg-red-50 rounded p-4">
-                    <p class="font-bold">System Error</p>
-                    <p class="text-sm">${e.message}</p>
-                    <p class="text-xs mt-2">Please check console for details.</p>
-                </div>`;
-            }
-        }
-    </script>
 </body>
+
+</html>
+
 
 </html>
