--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="../js/tailwind.config.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="../js/config.js"></script>
     <script src="../js/db.js"></script>
     <script src="../js/main.js"></script>
 </head>
@@ -99,7 +101,8 @@
 
     <script>
         // Auth Check
-        const user = JSON.parse(sessionStorage.getItem('biltone_session'));
+        const session = sessionStorage.getItem('biltone_session');
+        const user = session ? JSON.parse(session) : null;
         if (!user) window.location.href = 'login.html';
         document.getElementById('admin-name').textContent = user.name;
 
@@ -112,36 +115,46 @@
             if (ordersLink) ordersLink.classList.add('hidden');
         }
 
-        // Load Stats
-        const orders = DB.getOrders();
-        const products = DB.getProducts();
+        async function initDashboard() {
+            try {
+                // Load Stats
+                const orders = await DB.getOrders();
+                const products = await DB.getProducts();
 
-        document.getElementById('total-orders').textContent = orders.length;
-        document.getElementById('total-products').textContent = products.length;
+                document.getElementById('total-orders').textContent = orders.length;
+                document.getElementById('total-products').textContent = products.length;
 
-        const revenue = orders.reduce((sum, o) => sum + o.total, 0);
-        document.getElementById('total-revenue').textContent = App.formatMoney(revenue);
+                const revenue = orders.reduce((sum, o) => sum + (o.total || 0), 0);
+                document.getElementById('total-revenue').textContent = App.formatMoney(revenue);
 
-        // Load Recent Orders
-        const recent = orders.slice(0, 5);
-        const tbody = document.getElementById('recent-orders');
+                // Load Recent Orders
+                const recent = orders.slice(0, 5);
+                const tbody = document.getElementById('recent-orders');
 
-        if (recent.length === 0) {
-            tbody.innerHTML = '<tr><td colspan="5" class="px-6 py-4 text-center text-gray-500">No orders yet.</td></tr>';
-        } else {
-            recent.forEach(order => {
-                const row = `
-                    <tr class="hover:bg-gray-50">
-                        <td class="px-6 py-4 font-mono text-xs">${order.id}</td>
-                        <td class="px-6 py-4">${order.customer.name}</td>
-                        <td class="px-6 py-4 font-bold">${App.formatMoney(order.total)}</td>
-                        <td class="px-6 py-4"><span class="px-2 py-1 rounded text-xs font-bold ${order.status === 'Pending' ? 'bg-yellow-100 text-yellow-700' : 'bg-green-100 text-green-700'}">${order.status}</span></td>
-                        <td class="px-6 py-4 text-gray-500">${new Date(order.date).toLocaleDateString()}</td>
-                    </tr>
-                `;
-                tbody.innerHTML += row;
-            });
+                tbody.innerHTML = '';
+
+                if (recent.length === 0) {
+                    tbody.innerHTML = '<tr><td colspan="5" class="px-6 py-4 text-center text-gray-500">No orders yet.</td></tr>';
+                } else {
+                    recent.forEach(order => {
+                        const row = `
+                            <tr class="hover:bg-gray-50">
+                                <td class="px-6 py-4 font-mono text-xs">${order.id}</td>
+                                <td class="px-6 py-4">${order.customer_details?.name || 'N/A'}</td>
+                                <td class="px-6 py-4 font-bold">${App.formatMoney(order.total)}</td>
+                                <td class="px-6 py-4"><span class="px-2 py-1 rounded text-xs font-bold ${order.status === 'Pending' ? 'bg-yellow-100 text-yellow-700' : 'bg-green-100 text-green-700'}">${order.status}</span></td>
+                                <td class="px-6 py-4 text-gray-500">${new Date(order.created_at || order.date).toLocaleDateString()}</td>
+                            </tr>
+                        `;
+                        tbody.innerHTML += row;
+                    });
+                }
+            } catch (e) {
+                console.error("Dashboard error:", e);
+            }
         }
+
+        initDashboard();
     </script>
 </body>
 
