--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard | BiltoneBrands</title>
+    <title>Edit Content | BiltoneBrands</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="../js/tailwind.config.js"></script>
@@ -14,17 +14,16 @@
     <script src="../js/main.js"></script>
 </head>
 
-<body class="bg-cover bg-center bg-fixed font-sans text-gray-800 flex min-h-screen"
-    style="background-image: url('../images/admin_bg_lighter.png');">
+<body class="bg-gray-50 font-sans text-gray-800 flex h-screen overflow-hidden">
 
     <!-- Sidebar -->
-    <aside class="w-64 bg-white shadow-md hidden md:flex flex-col">
+    <aside class="w-64 bg-white border-r border-gray-200 hidden md:flex flex-col">
         <div class="p-6 border-b border-gray-100">
-            <h1 class="text-xl font-bold text-primary-900">Admin Panel</h1>
+            <h2 class="text-2xl font-bold text-primary-900">Admin Panel</h2>
         </div>
-        <nav class="flex-grow p-4 space-y-2">
+        <nav class="flex-1 p-4 space-y-2">
             <a href="dashboard.html"
-                class="block px-4 py-2 bg-primary-50 text-primary-700 font-semibold rounded-lg">Dashboard</a>
+                class="block px-4 py-2 text-gray-600 hover:bg-gray-50 rounded-lg transition">Dashboard</a>
             <a href="products.html"
                 class="block px-4 py-2 text-gray-600 hover:bg-gray-50 rounded-lg transition">Products</a>
             <a href="orders.html" id="orders-link"
@@ -34,127 +33,90 @@
             <a href="messages.html"
                 class="block px-4 py-2 text-gray-600 hover:bg-gray-50 rounded-lg transition">Messages</a>
             <a href="edit_about.html" id="content-link"
-                class="block px-4 py-2 text-gray-600 hover:bg-gray-50 rounded-lg transition hidden">About Us</a>
+                class="block px-4 py-2 bg-primary-50 text-primary-700 font-medium rounded-lg transition hidden">About
+                Us</a>
             <a href="profile.html"
                 class="block px-4 py-2 text-gray-600 hover:bg-gray-50 rounded-lg transition">Profile</a>
         </nav>
         <div class="p-4 border-t border-gray-100">
             <button onclick="App.logout()"
-                class="w-full text-left px-4 py-2 text-red-500 hover:bg-red-50 rounded-lg transition">Logout</button>
+                class="flex items-center gap-2 text-gray-600 hover:text-red-600 transition w-full px-4 py-2">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+                </svg>
+                Log Out
+            </button>
         </div>
     </aside>
 
     <!-- Main Content -->
-    <main class="flex-grow p-8">
-        <div class="flex justify-between items-center mb-8">
-            <h2 class="text-2xl font-bold text-gray-900">Dashboard Overview</h2>
-            <div class="flex items-center gap-4">
-                <div class="text-sm text-gray-500 hidden md:block">Welcome, <span id="admin-name"
-                        class="font-semibold">Admin</span></div>
-                <button onclick="App.logout()"
-                    class="text-sm text-red-500 font-semibold hover:text-red-700">Logout</button>
-            </div>
-        </div>
+    <main class="flex-1 overflow-y-auto">
+        <header class="bg-white border-b border-gray-200 p-4 md:hidden flex justify-between items-center">
+            <h1 class="font-bold text-lg text-gray-900">Edit Content</h1>
+            <button onclick="App.logout()" class="text-sm text-gray-600">Log Out</button>
+        </header>
 
-        <!-- Site Content Editor Link (Moved to Sidebar) -->
-
-        <!-- Stats Grid -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
-            <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100">
-                <div class="text-gray-500 text-sm mb-1">Total Orders</div>
-                <div class="text-3xl font-bold text-gray-900" id="total-orders">0</div>
-            </div>
-            <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100">
-                <div class="text-gray-500 text-sm mb-1">Total Revenue</div>
-                <div class="text-3xl font-bold text-primary-600" id="total-revenue">KES 0</div>
-            </div>
-            <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100">
-                <div class="text-gray-500 text-sm mb-1">Products</div>
-                <div class="text-3xl font-bold text-gray-900" id="total-products">0</div>
-            </div>
-        </div>
-
-        <!-- Recent Orders -->
-        <div class="bg-white rounded-xl shadow-sm border border-gray-100 overflow-hidden">
-            <div class="p-6 border-b border-gray-100 flex justify-between items-center">
-                <h3 class="font-bold text-gray-900">Recent Orders</h3>
-                <a href="orders.html" class="text-sm text-primary-500 hover:underline">View All</a>
-            </div>
-            <div class="overflow-x-auto">
-                <table class="w-full text-left text-sm">
-                    <thead class="bg-gray-50 text-gray-500">
-                        <tr>
-                            <th class="px-6 py-3">Order ID</th>
-                            <th class="px-6 py-3">Customer</th>
-                            <th class="px-6 py-3">Total</th>
-                            <th class="px-6 py-3">Status</th>
-                            <th class="px-6 py-3">Date</th>
-                        </tr>
-                    </thead>
-                    <tbody id="recent-orders" class="divide-y divide-gray-100">
-                        <!-- Injected via JS -->
-                    </tbody>
-                </table>
+        <div class="container mx-auto px-4 py-8">
+            <h1 class="text-2xl font-bold text-gray-900 mb-6">Edit "About Us" Content</h1>
+            <div class="bg-white rounded-xl shadow-sm border border-gray-100 p-6">
+                <p class="mb-4 text-sm text-gray-500">Edit the HTML content for the About Us page below. Be careful with
+                    tags.</p>
+                <div class="mb-6">
+                    <textarea id="about-editor" rows="15"
+                        class="w-full border border-gray-300 rounded-lg p-4 font-mono text-sm focus:ring-2 focus:ring-primary-500 focus:outline-none"></textarea>
+                </div>
+                <div class="flex justify-end gap-4">
+                    <a href="../about.html" target="_blank"
+                        class="px-6 py-2 border border-gray-300 rounded-lg text-gray-700 hover:bg-gray-50 transition">Preview
+                        Page</a>
+                    <button onclick="saveContent()"
+                        class="px-6 py-2 bg-primary-500 text-white rounded-lg hover:bg-primary-600 transition font-bold shadow-md">Save
+                        Changes</button>
+                </div>
             </div>
         </div>
     </main>
 
     <script>
-        // Auth Check
+        // Check Auth
         const session = sessionStorage.getItem('biltone_session');
-        const user = session ? JSON.parse(session) : null;
-        if (!user) window.location.href = 'login.html';
-        document.getElementById('admin-name').textContent = user.name;
+        if (!session) window.location.href = 'login.html';
+        const user = JSON.parse(session);
 
-        // Owner Check
         if (user.role === 'owner') {
             document.getElementById('users-link').classList.remove('hidden');
             const contentLink = document.getElementById('content-link');
-            if (contentLink) contentLink.classList.remove('hidden');
+            contentLink.classList.remove('hidden');
             const ordersLink = document.getElementById('orders-link');
             if (ordersLink) ordersLink.classList.add('hidden');
+        } else {
+            // Redirect if not owner
+            window.location.href = 'dashboard.html';
         }
 
-        async function initDashboard() {
+        // Load Content
+        (async function load() {
             try {
-                // Load Stats
-                const orders = await DB.getOrders();
-                const products = await DB.getProducts();
-
-                document.getElementById('total-orders').textContent = orders.length;
-                document.getElementById('total-products').textContent = products.length;
-
-                const revenue = orders.reduce((sum, o) => sum + (o.total || 0), 0);
-                document.getElementById('total-revenue').textContent = App.formatMoney(revenue);
-
-                // Load Recent Orders
-                const recent = orders.slice(0, 5);
-                const tbody = document.getElementById('recent-orders');
-
-                tbody.innerHTML = '';
-
-                if (recent.length === 0) {
-                    tbody.innerHTML = '<tr><td colspan="5" class="px-6 py-4 text-center text-gray-500">No orders yet.</td></tr>';
-                } else {
-                    recent.forEach(order => {
-                        const row = `
-                            <tr class="hover:bg-gray-50">
-                                <td class="px-6 py-4 font-mono text-xs">${order.id}</td>
-                                <td class="px-6 py-4">${order.customer_details?.name || 'N/A'}</td>
-                                <td class="px-6 py-4 font-bold">${App.formatMoney(order.total)}</td>
-                                <td class="px-6 py-4"><span class="px-2 py-1 rounded text-xs font-bold ${order.status === 'Pending' ? 'bg-yellow-100 text-yellow-700' : 'bg-green-100 text-green-700'}">${order.status}</span></td>
-                                <td class="px-6 py-4 text-gray-500">${new Date(order.created_at || order.date).toLocaleDateString()}</td>
-                            </tr>
-                        `;
-                        tbody.innerHTML += row;
-                    });
-                }
+                const content = await DB.getContent();
+                document.getElementById('about-editor').value = content.aboutUs || '';
             } catch (e) {
-                console.error("Dashboard error:", e);
+                console.error(e);
+            }
+        })();
+
+        async function saveContent() {
+            const newHTML = document.getElementById('about-editor').value;
+            const currentContent = await DB.getContent();
+            const newContent = { ...currentContent, aboutUs: newHTML };
+            try {
+                await DB.saveContent(newContent);
+                App.showToast('Content Updated Successfully!');
+            } catch (e) {
+                alert("Error saving: " + e.message);
             }
         }
-
-        initDashboard();
     </script>
 </body>
 
