--- a/admin/messages.html
+++ b/admin/messages.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="../js/tailwind.config.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="../js/config.js"></script>
     <script src="../js/db.js"></script>
     <script src="../js/main.js"></script>
 </head>
@@ -90,37 +92,46 @@
             if (ordersLink) ordersLink.classList.add('hidden');
         }
 
-        function renderMessages() {
-            const messages = DB.getMessages();
-            const tbody = document.getElementById('messages-table');
-            tbody.innerHTML = '';
+        async function renderMessages() {
+            try {
+                const messages = await DB.getMessages();
+                const tbody = document.getElementById('messages-table');
+                tbody.innerHTML = '';
 
-            messages.forEach(msg => {
-                const tr = document.createElement('tr');
-                tr.className = msg.status === 'New' ? 'bg-blue-50' : '';
-                tr.innerHTML = `
-                    <td class="p-4">
-                        <span class="px-2 py-1 rounded text-xs font-bold ${msg.status === 'New' ? 'bg-blue-100 text-blue-700' : 'bg-gray-100 text-gray-600'}">${msg.status}</span>
-                    </td>
-                    <td class="p-4">
-                        <div class="font-bold text-gray-900">${msg.name}</div>
-                        <div class="text-gray-500 text-xs">${msg.email}</div>
-                    </td>
-                    <td class="p-4 text-gray-700 max-w-md truncate" title="${msg.message}">${msg.message}</td>
-                    <td class="p-4 text-gray-500">${new Date(msg.date).toLocaleDateString()}</td>
-                    <td class="p-4">
-                        <a href="mailto:${msg.email}?subject=Re: Inquiry&body=Hi ${msg.name},%0D%0A%0D%0AIn response to your message: '${msg.message}'..." 
-                           onclick="DB.markMessageRead('${msg.id}'); setTimeout(renderMessages, 500);"
-                           target="_blank"
-                           class="text-primary-600 hover:text-primary-800 font-medium">Reply</a>
-                    </td>
-                `;
-                tbody.appendChild(tr);
-            });
+                messages.forEach(msg => {
+                    const tr = document.createElement('tr');
+                    tr.className = msg.status === 'New' ? 'bg-blue-50' : '';
+                    tr.innerHTML = `
+                        <td class="p-4">
+                            <span class="px-2 py-1 rounded text-xs font-bold ${msg.status === 'New' ? 'bg-blue-100 text-blue-700' : 'bg-gray-100 text-gray-600'}">${msg.status}</span>
+                        </td>
+                        <td class="p-4">
+                            <div class="font-bold text-gray-900">${msg.name}</div>
+                            <div class="text-gray-500 text-xs">${msg.email}</div>
+                        </td>
+                        <td class="p-4 text-gray-700 max-w-md truncate" title="${msg.message}">${msg.message}</td>
+                        <td class="p-4 text-gray-500">${new Date(msg.created_at || msg.date).toLocaleDateString()}</td>
+                        <td class="p-4">
+                            <a href="mailto:${msg.email}?subject=Re: Inquiry&body=Hi ${msg.name},%0D%0A%0D%0AIn response to your message: '${msg.message}'..." 
+                               onclick="markAsRead('${msg.id}')"
+                               target="_blank"
+                               class="text-primary-600 hover:text-primary-800 font-medium">Reply</a>
+                        </td>
+                    `;
+                    tbody.appendChild(tr);
+                });
 
-            if (messages.length === 0) {
-                tbody.innerHTML = '<tr><td colspan="5" class="p-8 text-center text-gray-500">No messages yet.</td></tr>';
+                if (messages.length === 0) {
+                    tbody.innerHTML = '<tr><td colspan="5" class="p-8 text-center text-gray-500">No messages yet.</td></tr>';
+                }
+            } catch (e) {
+                console.error(e);
             }
+        }
+
+        window.markAsRead = async function (id) {
+            await DB.markMessageRead(id);
+            setTimeout(renderMessages, 500);
         }
 
         renderMessages();
