--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BiltoneBrands | Barber & Salon Products</title>
-
-    <!-- Google Fonts -->
+    <title>Contact Us | Biltone Supplies</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -34,13 +30,13 @@
             }
         }
     </script>
-
-    <!-- App Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/config.js"></script>
     <script src="js/db.js"></script>
     <script src="js/main.js"></script>
 </head>
 
-<body class="bg-gray-50 font-sans text-gray-800">
+<body class="bg-gray-50 font-sans text-gray-800 flex flex-col min-h-screen">
 
     <!-- Navbar -->
     <nav class="bg-white shadow-md sticky top-0 z-50">
@@ -48,16 +44,14 @@
             <a href="index.html" class="text-2xl font-bold text-primary-900 flex items-center gap-2">
                 <span
                     class="bg-gradient-to-r from-primary-500 to-primary-900 text-transparent bg-clip-text">Biltone</span>
-                Brands
+                Supplies
             </a>
-
             <div class="hidden md:flex gap-6 font-medium text-gray-600">
                 <a href="index.html" class="hover:text-primary-500 transition">Home</a>
                 <a href="products.html" class="hover:text-primary-500 transition">Products</a>
                 <a href="about.html" class="hover:text-primary-500 transition">About Us</a>
-                <a href="contact.html" class="hover:text-primary-500 transition">Contact</a>
+                <a href="contact.html" class="text-primary-500 font-bold">Contact</a>
             </div>
-
             <div class="flex items-center gap-4">
                 <a href="cart.html" class="relative p-2 hover:bg-gray-100 rounded-full transition">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-700" fill="none"
@@ -74,44 +68,52 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <header class="bg-primary-50 py-12 md:py-20">
-        <div class="container mx-auto px-4 flex flex-col md:flex-row items-center">
-            <div class="md:w-1/2 mb-8 md:mb-0">
-                <h1 class="text-4xl md:text-5xl font-bold text-gray-900 leading-tight mb-4">
-                    Premium Supplies for <br>
-                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-accent-pink to-accent-rose">Barbers
-                        & Salons</span>
-                </h1>
-                <p class="text-lg text-gray-600 mb-8">Equip your shop with the best tools in the market. Quality
-                    guaranteed, delivery countrywide.</p>
-                <a href="products.html"
-                    class="inline-block bg-gradient-to-r from-primary-500 to-primary-900 text-white px-8 py-3 rounded-full font-semibold shadow-lg hover:shadow-xl transition transform hover:-translate-y-1">
-                    Shop Now
-                </a>
-            </div>
-            <div class="md:w-1/2 flex justify-center">
-                <img src="images/hero_products_composite.png" alt="Barber Tools" class="max-w-full h-auto">
-            </div>
-        </div>
-    </header>
+    <!-- Main Content -->
+    <main class="flex-grow container mx-auto px-4 py-12">
+        <div class="max-w-xl mx-auto bg-white rounded-xl shadow-sm border border-gray-100 p-8">
+            <h1 class="text-3xl font-bold text-gray-900 mb-6 text-center">Contact Us</h1>
+            <form onsubmit="handleContact(event)" class="space-y-4">
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Name</label>
+                    <input type="text" id="c-name" required
+                        class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-primary-500 focus:outline-none">
+                </div>
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+                    <input type="email" id="c-email" required
+                        class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-primary-500 focus:outline-none">
+                </div>
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Message</label>
+                    <textarea rows="4" id="c-message" required
+                        class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-primary-500 focus:outline-none"></textarea>
+                </div>
+                <button type="submit"
+                    class="w-full bg-primary-500 text-white font-bold py-3 rounded-lg hover:bg-primary-600 transition">
+                    Send Message
+                </button>
+            </form>
+            <script>
+                async function handleContact(e) {
+                    e.preventDefault();
+                    const name = document.getElementById('c-name').value;
+                    const email = document.getElementById('c-email').value;
+                    const message = document.getElementById('c-message').value;
 
-    <!-- Featured Products -->
-    <section class="py-16">
-        <div class="container mx-auto px-4">
-            <div class="flex justify-between items-end mb-8">
-                <h2 class="text-3xl font-bold text-gray-900">Featured Products</h2>
-                <a href="products.html" class="text-primary-500 font-semibold hover:underline">View All &rarr;</a>
-            </div>
-
-            <div id="featured-products" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-                <!-- Products will be injected here by JS -->
-            </div>
+                    try {
+                        await DB.saveMessage({ name, email, message });
+                        App.showToast('Message sent! We will contact you shortly.');
+                        e.target.reset();
+                    } catch (error) {
+                        alert("Failed to send message: " + error.message);
+                    }
+                }
+            </script>
         </div>
-    </section>
+    </main>
 
     <!-- Footer -->
-    <footer class="bg-gray-900 text-gray-300 py-12">
+    <footer class="bg-gray-900 text-gray-300 py-12 mt-auto">
         <div class="container mx-auto px-4 grid md:grid-cols-3 gap-8">
             <div>
                 <h3 class="text-xl font-bold text-white mb-4">Biltone Supplies</h3>
@@ -167,60 +169,9 @@
             </div>
         </div>
         <div class="border-t border-gray-800 mt-8 pt-8 text-center text-sm">
-            &copy; 2025 BiltoneBrands. All rights reserved.
+            &copy; 2025 Biltone Supplies. All rights reserved.
         </div>
     </footer>
-
-    <script>
-        // Render Featured Products
-        // Render Featured Products
-        try {
-            const products = DB.getProducts().slice(0, 4); // Get first 4
-            const container = document.getElementById('featured-products');
-
-            if (!products || products.length === 0) {
-                container.innerHTML = '<div class="col-span-full text-center py-8 text-gray-500">No products found. Database might be empty.</div>';
-            } else {
-                products.forEach(product => {
-                    const hasOffer = product.offerPrice && new Date(product.offerExpires) > new Date();
-                    const priceDisplay = hasOffer
-                        ? `<span class="text-red-500 font-bold">${App.formatMoney(product.offerPrice)}</span> <span class="text-gray-400 line-through text-sm">${App.formatMoney(product.price)}</span>`
-                        : `<span class="text-gray-900 font-bold">${App.formatMoney(product.price)}</span>`;
-
-                    const card = `
-                        <div class="bg-white p-4 rounded-xl shadow-sm hover:shadow-md transition group border border-gray-100">
-                            <div class="relative mb-4 overflow-hidden rounded-lg bg-gray-100 h-48">
-                                <img src="${product.image}" alt="${product.title}" class="w-full h-full object-cover group-hover:scale-105 transition duration-500 relative z-10" onerror="this.onerror=null; this.src='https://placehold.co/400x400?text=No+Image'">
-                                ${hasOffer ? '<span class="absolute top-2 left-2 bg-red-500 text-white text-xs font-bold px-2 py-1 rounded z-20">OFFER</span>' : ''}
-                            </div>
-                            <div class="p-4">
-                                <h3 class="font-semibold text-gray-800 mb-2 truncate">${product.title}</h3>
-                                <div class="flex justify-between items-center">
-                                    <div>${priceDisplay}</div>
-                                    <button onclick="App.addToCart(DB.getProduct(${product.id}))" class="bg-primary-50 text-primary-600 p-2 rounded-full hover:bg-primary-100 transition">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
-                                        </svg>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    `;
-                    container.innerHTML += card;
-                });
-            }
-        } catch (e) {
-            console.error("Critical Error rendering products:", e);
-            const container = document.getElementById('featured-products');
-            if (container) {
-                container.innerHTML = `<div class="col-span-full text-center py-8 text-red-500 bg-red-50 rounded p-4">
-                    <p class="font-bold">System Error</p>
-                    <p class="text-sm">${e.message}</p>
-                    <p class="text-xs mt-2">Please check console for details.</p>
-                </div>`;
-            }
-        }
-    </script>
 </body>
 
 </html>
